--- a/public/style.css
+++ b/public/style.css
@@ -1,24 +1,32 @@
 body{ 
-    background-color: blue;
+    background-color: #9e0000;
     min-width: none;
-    text-align: left;
+    text-align: center;
 } 
 .suggestions li{
     font-size: large;
     margin: 10px;
-    background-image: linear-gradient(red,yellow);
+    background-image: linear-gradient(#751d1d,#590000);
+    color: white;
+    padding: 30px 0;
+    border: 3px solid white;
+    border-radius: 50px;
+    margin: 20px;
 }
 .container{
-    max-width: 1000px; 
+    max-width: 1000px;
+    padding-top: 50px;
 }
 h1{
     font-weight: bold;
     color: white;
-    text-align: left;
-    font-size: large;
+    text-align: center;
+    font-family: "Trirong", serif;
 }
 h3{
     font-weight: bold;
     color: white;
-    text-align: left;
+    text-align: center;
 }
+
+
